# Face-Detector-1MB-with-landmark

./: .gitignore  Untitled.ipynb  convert_to_onnx.py  cpu.py  detect.py  detect_on_video.py  faceDetector-slim.onnx  faceDetector.onnx  log  ssd_detector.py  train.py  train.sh
Face_Detector_ncnn/: .gitignore  CMakeLists.txt  FaceAlive.cpp  FaceDetector.cpp  FaceDetector.h  Untitled.ipynb  face_recognize.cpp  face_track.cpp  face_tracking.py  mtcnn.cpp  mtcnn.h  mtcnn_demo.cpp  optical_flow.cpp  optical_tracker.cpp  optical_tracker.h  simple_run.cpp  ssd_on_image.cpp  ssd_on_video.cpp  ssd_onet.cpp  test_c.cpp  track.cpp  track_demo.cpp  track_detect.cpp  util.cpp
Face_Detector_ncnn/model/: FaceAnti-Spoofing.param  README.md  faceRecognize.param  model-slim.param
data/: config.py  widerface  widerface-mask
rknn/: ssd_detector.py
weights/: RFB_320_mask.pth
